major: misc improvements across

--- a/Notes/Part 1/1. Django Fundamentals.md
+++ b/Notes/Part 1/1. Django Fundamentals.md
@@ -179,7 +179,7 @@ Read docs.
 
 - Always namespace template files. Read TLDR in: [Gemini](https://g.co/gemini/share/73e20a46eaea).
 
-- We can replace Django's default template engine with a preferred template engine if we want.
+- We can replace Django's default template engine with a preferred template engine if we want. (like Jinja)
 
 ### Important
 
