--- a/Notes/Part 1/2. Building a Data Model.md
+++ b/Notes/Part 1/2. Building a Data Model.md
@@ -15,7 +15,7 @@ Types of relationships:
 <details>
 <summary>Association class?</summary>
 
-A special type of class used in UML/data modeling to represent a **relationship that itself has attributes**.
+A special type of class used in UML (Unified Modeling Language) / data modeling to represent a **relationship that itself has attributes**.
 
 For example:
 
@@ -31,21 +31,97 @@ An **association class = relationship + its own attributes.**
 
 ## Organizing Models in Apps
 
-> Covers how to properly break a Django project into apps—avoiding monoliths and over-fragmentation—by grouping related functionality (e.g., store) while keeping optional features (e.g., tags) as separate self-contained apps for high cohesion and low coupling.
+> Covers how to properly break a Django project into apps—avoiding monoliths and over-fragmentation—by grouping related functionality (e.g., product, cart, order) while keeping optional features (e.g., tags) as separate self-contained apps for high cohesion and low coupling.
 
-- [Monolithic Application](https://en.wikipedia.org/wiki/Monolithic_application): All models live in a single app.  
-  **Problem:** Complexity
+> Cohesion vs Coupling:  
+> **Cohesion** measures how well the elements within a single module work together, while **coupling** measures the degree of interdependence between different modules. The goal of good software design is to have **high cohesion** (elements in a module are strongly related) and **low coupling** (modules are independent of each other). This makes the software more modular, maintainable, and easier to understand.
+> Alright, Samyak, here’s a clean, crisp, **concise set of notes** from that whole explanation — but still clear enough so you remember the logic without rewatching anything.
 
-- [Microservices](https://en.wikipedia.org/wiki/Microservices): Multiple apps, each containing a few models.  
-  **Problem:** Interdependence (Coupling)
+- A Django **project** contains multiple **apps**.
+  Each app should represent **one focused piece of functionality**.
 
-**Middle ground approach:**
+- **Bad Approach 1: One Giant “store” App**
 
-- Apps should be **self-contained** / have **high cohesion**:
+  - All models/features dumped into a single app.
+  - Becomes a **monolith** → bloated, hard to maintain, hard to understand, hard to reuse.
 
-  - If we `pip install` an app into another project, it should not require installing other apps just to function correctly.
+- **Bad Approach 2: Too Many Fine-Grained Apps**
+  Example: products, customers, cart, orders.
+  Problems:
 
-- Apps should have **zero or minimal coupling**.
+  - Apps become **dependent** on each other (cart → products; orders → cart).
+  - Hard to reuse in future projects because you must install multiple interdependent apps.
+  - Updating one app may break others → tightly coupled.
+  - Some features make no sense alone (e.g., cart without products).
+
+- **Correct Approach: Balanced App Boundaries**
+
+  - Avoid both extremes (huge monolith, tiny tightly-coupled components).
+  - Use **high cohesion** (each app focuses on one purpose).
+  - Use **low coupling** (apps shouldn’t rely on each other unnecessarily).
+
+- **Example: Tagging System**
+
+  - Tag functionality is **generic**, not exclusive to e-commerce.
+  - Should be placed in a separate `tags` app with:
+
+    - `Tag`
+    - `TagItem` (generic link: product, article, video, etc.)
+
+  - Completely reusable in any type of project.
+
+- **Resulting Good Design**
+
+  - `store` app → product catalog + cart + orders (all highly related, so grouped).
+  - `tags` app → independent, reusable elsewhere.
+  - Apps can be updated or reused **independently** with minimal risk.
+
+---
+
+Note that above was not **Monolith vs Microservices**, but **Monolith vs <u>Modular Monolith</u>**.
+
+<details>
+<summary>Gemini</summary>
+
+### How to Answer in an Interview
+
+If an interviewer asks: _"What is the difference between Monolith and Microservices?"_
+
+**Don't say:** "Monolith is one app, Microservices is multiple Django apps." (This is wrong).
+
+**Say this instead:**
+
+> "A **Monolithic** architecture is where all functional components (Auth, Products, Orders) sit in a **single codebase** and are deployed together as a distinct unit. They share the same memory and database. Even if we organize a Django project into multiple 'apps' (like `users` and `products`), it's still a **Modular Monolith** because they communicate via direct Python imports.
+
+>
+
+> **Microservices**, on the other hand, are when we split those components into **physically separate applications**, often in different repositories. They run on different servers/ports, have their own distinct databases, and communicate over a network using **HTTP APIs** or message queues."
+
+### TL;DR
+
+- **You were right.** Codebase sharing = Monolith.
+
+- **Mosh's approach:** Modular Monolith (Good for 99% of startups).
+
+- **True Microservices:** Separate Repos, Separate DBs, API communication (Needed for Google/Netflix scale).
+
+</details>
+
+<details>
+<summary>ChatGPT</summary>
+
+### Interview-ready
+
+- “Django apps are _code modules_. Monolith vs microservice is about _deployability & runtime independence_. Multiple apps in one Django project → monolith unless you extract them into separate services with independent runtimes and data.”
+- “Microservices = independent deployable units + own data ownership + network communication. Apps in the same Django process are not microservices.”
+
+### TLDR
+
+- Django apps ≠ microservices.
+- Microservices require independent deploy/run/data boundaries and API-driven communication.
+- Start modular monolith, extract services when you need independent scale, teams, or release cycles.
+
+</details>
 
 ## Creating Models
 
@@ -179,7 +255,7 @@ ON C.id = E.course_id
 WHERE E.student_id = 1;
 ```
 
-> Remove `WHERE` clause to get all courses for all students.
+> Remove `WHERE` clause to get all courses for **all** students.
 
 ## Resolving Circular Relationships
 
@@ -187,17 +263,15 @@ WHERE E.student_id = 1;
 
 See `store.models.Collection` class.
 
-To avoid name clash in case of circular dependency:
+Resolve reverse relation conflicts:
 
-- **No reverse relation needed?**
-  Use:
+- Tell Django to skip creating reverse relation:
 
   ```py
   related_name="+"
   ```
 
-- **Need a custom reverse relation name?**
-  Use:
+- Or give a custom name:
 
   ```py
   related_name="custom_name"
@@ -210,7 +284,7 @@ https://docs.djangoproject.com/en/5.2/ref/models/fields/#django.db.models.Foreig
 > Explains implementing generic relationships using `ContentType`, `object_id`, and `GenericForeignKey`, demonstrated through reusable tagging and likes apps.
 
 As discussed in the `Organizing Models in Apps`, we have a separate app `tags`.  
-Now, to define the model, we should use a generic `ContentType` model instead of our actual model(s). So that the app is not actually related, and can be used in any other project as is.
+Now, for defining the relationship, we should use a generic `ContentType` model instead of our actual model(s). So that the app is not actually related, and can be used in any other project as is.
 
 > `ContentType` model is specifically made for allowing generic relationships. It's part of the built-in Django app `contenttypes`.
 
@@ -222,4 +296,26 @@ object_id = models.PositiveIntegerField()
 content_object = GenericForeignKey()
 ```
 
-Read how it works: [Gemini](https://g.co/gemini/share/d7fc1a0b3bb1)
+---
+
+### What exactly is `content_object` and its use in a generic model in Django?
+
+In a generic model in Django, **`content_object` is a special attribute that gives you the actual Python object that a generic relationship is pointing to.**
+
+It's not a real field in your database. Instead, it's a convenience property created by a `GenericForeignKey` that uses two other database fields—`content_type` and `object_id`—to find and return the related model instance.
+
+Think of it this way:
+
+- `content_type`: Tells you _which model_ (which database table) to look at.
+- `object_id`: Tells you _which specific row_ (which object) in that table to get.
+- `content_object`: Combines the two to give you the actual object itself.
+
+So:
+
+- **`content_object`** is a virtual attribute provided by Django's `GenericForeignKey`.
+- It allows one model (e.g., `Comment`, `Tag`) to have a relationship with **any other model** in your project.
+- It works by using two database columns: `content_type` (the model's type) and `object_id` (the model instance's primary key).
+- You use it to **get** the related object (e.g., `my_tag.content_object`) or to **set** the relationship when creating a new object (e.g., `TaggedItem.objects.create(content_object=my_article)`).
+- It's the key to building flexible, reusable apps like tagging or notification systems.
+
+\- [Gemini](https://g.co/gemini/share/d7fc1a0b3bb1)
