--- a/Notes/Part 1/3. Setting Up the Database.md
+++ b/Notes/Part 1/3. Setting Up the Database.md
@@ -38,7 +38,8 @@ Choice depends on our requirements.
 
 <br>
 
-What's a `models.SlugField()` and how exactly does it work? Read: [`Gemini`](https://g.co/gemini/share/faf64a82a49d)
+What is `models.SlugField()` and how exactly does it work?  
+Read: [`Gemini`](https://g.co/gemini/share/faf64a82a49d)
 
 ## Running Migrations
 
@@ -80,7 +81,7 @@ If we override conventions for one model, we’d need to do it for all models to
 
 ## Reverting Migrations
 
-> Explains how to undo/revert migrations—either by downgrading with `migrate`, deleting migration files & code, or more cleanly using Git reset.
+> Explains how to undo/revert migrations—by downgrading with `migrate`, and then either deleting migration files & code, or more cleanly using Git reset.
 
 As discussed before, migration files are like git commits. Reverting migrations follows a similar concept.
 
