--- a/Notes/Part 1/4. Django ORM.md
+++ b/Notes/Part 1/4. Django ORM.md
@@ -51,7 +51,7 @@ Note that ORMs are a bit slow compared to directly querying the DB due to the ob
 
 ## Managers and QuerySets
 
-> Introduction to Django managers and query sets — managers act as a DB interface, query sets are lazy objects for building complex queries, and they’re only evaluated when iterated, sliced, or converted to a list.
+> Introduction to Django managers and query sets — managers act as a DB interface, query sets are lazy objects for building complex queries, and they’re only evaluated when iterated, converted to a list, printed, etc.
 
 `ModelName.objects` is a `Manager` object, which is basically an interface to the DB.  
 It has methods to query the DB like `.all()`, `.get()`, `.filter()`, `.exclude()`. (These are the most used ones.)
@@ -63,8 +63,13 @@ https://docs.djangoproject.com/en/5.2/topics/db/queries/#retrieving-objects
 
 ### [`QuerySet`s are lazy](https://docs.djangoproject.com/en/5.2/topics/db/queries/#querysets-are-lazy)
 
-`QuerySet` is not actually a `set` as the name might indicate. It actually works just like an `Iterator` object.  
+`QuerySet` is not actually a `set` as the name might suggest. It actually works just like an `Iterator` object.  
 Meaning, it evaluates the result (executes DB query) on the go when we actually access the value.
+
+> PS: We can also say that expression is not evaluated until the resulting value is still a queryset.  
+> e.g. `x = ModelName.objects.all()` - QS, so not evaluated yet.  
+> `x[1:3]` - (Adds LIMIT clause) Still a QS, so not evaluated yet.  
+> Now, if iteration (data access) / conversion to list / print etc. is done, then only the expression gets evaluated.
 
 Why?  
 Because we frequently chain methods like the following to mimic a complex/nested query:
@@ -80,7 +85,7 @@ So, what actually happens is Django forms the actual SQL query using all the cha
 
 ## Retrieving Objects
 
-> Use `all()` (returns queryset), `get()` (single object, raises exception if not found), or `filter().first()` / `filter().exists()` (safer alternatives to avoid exceptions).
+> Use `all()` (returns queryset), `get()` (single object, raises exception if not found or multiple found), or `filter().first()` / `filter().exists()` (safer alternatives to avoid exceptions).
 
 Check the code in `playground.views.test_queries`.
 
@@ -191,7 +196,7 @@ https://docs.djangoproject.com/en/5.2/ref/models/querysets/#values
 
 > Use **`only()`** to load specific fields (returns model instances, risk of N+1 queries if accessing undeclared fields), and **`defer()`** to exclude fields, unlike **`values()`** which returns plain dicts without extra queries.
 
-**Imp:** Pay attention to `<object>.<attr>` (e.g. `Product.description` when only `title` is loaded) usages. Check the code in `playground.views.test_queries`.
+**Imp:** Pay attention to `<object>.<attr>` usage (e.g. using `Product.description` when only `title` is loaded). Check the code in `playground.views.test_queries`.
 
 - Also, when is it ideal to use `defer`?
 
@@ -333,6 +338,11 @@ Read here:
 - [Perplexity](https://www.perplexity.ai/search/why-does-instead-of-default-na-cjt6YqS9QcCH.9KyTBLSCg)
 - [Gemini](https://g.co/gemini/share/be5226e0bf38)
 
+> Some insights from my revision session:
+>
+> - `order_set` usage: Only in python code, `select_related()`, `prefetch_related()`.
+> - `order` usage: Everywhere else, e.g., `F()`, `Count()`, etc.
+
 Check the code **attentively** in `playground.views.test_queries`.
 
 ## Working with Expression Wrappers
@@ -342,6 +352,20 @@ Check the code **attentively** in `playground.views.test_queries`.
 Used for complex expressions.
 
 Check the code in `playground.views.test_queries`.
+
+---
+
+**IMP: Use Strings to Initialize**
+
+To truly avoid all floating-point issues, you must initialize Decimal objects using strings (e.g., Decimal('0.1')), not Python floats (e.g., Decimal(0.1)). If you pass a float to the Decimal constructor, the small initial binary approximation error is captured exactly, preserving the inaccuracy you were trying to avoid.
+
+```sh
+>>> Decimal(.1) + Decimal(.2)
+Decimal('0.3000000000000000166533453694')
+
+>>> Decimal('.1') + Decimal('.2')
+Decimal('0.3')
+```
 
 ## Querying Generic Relationships
 
@@ -372,11 +396,49 @@ There comes overriding managers. Check the code in `tags.models` & `playground.v
 
 > QuerySets use a **cache**: after full evaluation (e.g., `list(qs)`), repeated access reads from memory instead of hitting the DB, but partial evaluation first can cause extra queries.
 
-Mosh didn't explain anything, just read the concise section: [Caching and QuerySets](https://docs.djangoproject.com/en/5.2/topics/db/queries/#caching-and-querysets)
+Mosh didn't explain anything, just read the section: [Caching and QuerySets](https://docs.djangoproject.com/en/5.2/topics/db/queries/#caching-and-querysets)
 
 It's very important, must read.
 
 > "Understanding how it works will allow you to write the most efficient code."
+
+Here're the crisp notes from that section:
+
+- A new QuerySet starts with an empty cache.
+- First evaluation → DB query happens → results stored in the QuerySet’s cache.
+- Further evaluations reuse the cached results (no new DB query).
+
+Why it matters:
+
+- Recreating QuerySets causes repeated queries.
+
+  - Example: calling `Entry.objects.all()` twice = 2 DB hits.
+
+- Use a saved QuerySet to avoid duplicate queries.
+
+```py
+qs = Entry.objects.all()
+[p.headline for p in qs]  # Hits DB once
+[p.pub_date for p in qs]  # Uses cache
+```
+
+When caching doesn't happen:
+
+- Partial evaluations (slicing or indexing) do NOT populate cache.
+  ```py
+  qs[5]  # Always hits DB unless queryset already fully evaluated
+  ```
+
+Cache gets populated only when the _entire_ QuerySet is evaluated:
+
+- `list(qs)`
+- `[x for x in qs]`
+- `entry in qs`
+- `bool(qs)`
+
+Important:
+
+- Printing a QuerySet does NOT evaluate it fully (so no cache). Since `__repr__()` only fetches a slice.
 
 ## Creating Objects
 
@@ -452,4 +514,4 @@ Performing raw SQL queries: https://docs.djangoproject.com/en/5.2/topics/db/sql
 
 ---
 
-> **CONCLUSION: DJANGO ORM IS A CRAZY PIECE OF ~~SHI~~ TOOL.**
+> **CONCLUSION: DJANGO ORM IS A CRAZY PIECE OF TOOL.**
