--- a/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
+++ b/Notes/Part 2/1. Building RESTful APIs with Django REST Framework.md
@@ -29,6 +29,49 @@ RESTful APIs help build systems that are:
 2. Resource Representations
 3. HTTP Methods
 
+---
+
+[Section researched & added by me.]
+
+### Formal REST constraints
+
+[wikipedia.org/wiki/REST#Architectural_constraints](https://en.wikipedia.org/wiki/REST#Architectural_constraints)
+
+- Client/Server
+- Stateless
+- Cache
+- Uniform interface
+  - Resource identification in requests
+  - Resource manipulation through representations
+  - Self-descriptive messages
+  - Hypermedia as the engine of application state (HATEOAS)
+- Layered system
+
+### REST API
+
+What exactly is a REST API?  
+What does it takes for an API to be called RESTful?
+
+[ChatGPT](https://chatgpt.com/share/691d613a-1424-800a-8d27-0053ccc90c08):
+
+- A **REST API** is an API that uses resources + HTTP methods + stateless design.
+- To be **RESTful**, an API must follow the main REST principles:
+
+  - Client-server separation
+  - Stateless
+  - Proper use of HTTP methods
+  - Resource-based URLs
+  - Caching
+  - Optional: HATEOAS
+
+[Gemini](https://gemini.google.com/share/55b55d8b0ff3):
+
+- **REST** is a set of architectural rules, not a library. To be **RESTful**, your API must be **Stateless**, separate **Client/Server**, allow **Caching**, and use a **Uniform Interface** (standard URLs and HTTP methods) to manipulate **Resources**.
+
+- **Relevance to you:** As a Django developer, when you use **Django REST Framework (DRF)**, `ModelViewSets` and `Routers` handle most of these constraints (like Uniform Interface and Standard Methods) for you automatically, but you are responsible for ensuring **Statelessness** (by not relying on server-side sessions).
+
+---
+
 ## Resources
 
 - A **resource** in a REST API is like an object in the application.
@@ -177,7 +220,7 @@ Just like we can show [custom fields in admin](/Notes/Part%201/5.%20The%20Admin%
     price_plus_tax = serializers.SerializerMethodField(method_name="get_price_plus_tax")
 
     def get_price_plus_tax(self, product: Product):
-        return round(product.unit_price * Decimal(1.1), 2)
+        return round(product.unit_price * Decimal('1.1'), 2)
 ```
 
 We can also change the name with which existing DB fields appear in the API:
@@ -255,7 +298,7 @@ class ProductSerializer(serializers.ModelSerializer):
     price_plus_tax = serializers.SerializerMethodField(method_name="get_price_plus_tax")
 
     def get_price_plus_tax(self, product: Product):
-        return round(product.unit_price * Decimal(1.1), 2)
+        return round(product.unit_price * Decimal('1.1'), 2)
 
     collection = serializers.HyperlinkedRelatedField(
         view_name="collection-detail", queryset=Collection.objects.all()
@@ -284,9 +327,14 @@ Check the code in `store.views.product_list()`.
 
 - `request.data` == `serializer.initial_data`: Actual `dict` came with `POST`.
 
-- `serializer.is_valid(raise_exception=True)`: Runs validation. DRF auto-generates rules based on `models.<Field>`.
+- `serializer.is_valid(raise_exception=True)`: Runs validations. DRF auto-generates rules based on `models.<Field>`.
 
 - `serializer.validated_data`: A validated `dict`. Related fields are actual objects now.
+
+- `serializer.validated_data` != `serializer.data`:
+  - `serializer.validated_data` is the cleaned internal Python dict available only after validation succeeds, used for saving data to the database. (Here, related fields are actual objects.)
+  - `serializer.data` is the formatted, primitive representation used for sending data as an API response to the client.
+  - \- [Gemini](https://share.google/aimode/9Hv1a8IqewHeikkiP)
 
 ### Customizing Validations
 
@@ -324,7 +372,7 @@ def validate(self, data):
         return Response(serializer.data, status=status.HTTP_201_CREATED)
 
         # `save()` would call `update()`:
-        serializer = ProductSerializer(product, data=request.data)
+        serializer = ProductSerializer(instance=product, data=request.data)
         ...
         serializer.save()
         # REST convention to return the updated data:
@@ -348,9 +396,18 @@ def update(self, instance, validated_data):
     return instance
 ```
 
+### `save()` vs `create()`/`update()`
+
+[Researched by me.]
+
+What is the difference exactly between `save()` and `create()`/`update()` in DRF serializers?
+
+- [Gemini](https://gemini.google.com/share/5cb940a121ad)
+- [ChatGPT](https://chatgpt.com/share/69233a60-09ec-800a-9146-7e8c211c7dec)
+
 ## Deleting Objects
 
-> Covered **deleting products** in DRF: implementing DELETE with 204 No Content, handling foreign key constraints gracefully (e.g., return 405 with error message if product is linked to orders).
+> Covered **deleting products** in DRF: implementing DELETE with 204 No Content, handling foreign key constraints gracefully (e.g., return 409 with error message if product is linked to orders).
 
 To delete a product:
 
