--- a/Notes/Part 2/2. Advanced API Concepts.md
+++ b/Notes/Part 2/2. Advanced API Concepts.md
@@ -36,7 +36,7 @@ class ProductList(APIView):
 
 > Explained **generic views in DRF**: concrete classes combining mixins (e.g., `ListCreateAPIView`, `RetrieveUpdateDestroyAPIView`) that reduce boilerplate by using `queryset` and `serializer_class` attributes, support overrides when needed, and simplify code while adding features like built-in forms in the browsable API.
 
-Instead of directly using the above mixins, we can use [Concrete View Classes](https://www.django-rest-framework.org/api-guide/generic-views/#concrete-view-classes), which combine one or more mixins. (Though we can also use the individual mixins directly when a concrete view class combined of required mixins is not there, see [Creating a Cart](/Notes/Part%202/3.%20Designing%20and%20Implementing%20a%20Shopping%20Cart%20API.md#creating-a-cart).)
+Instead of directly using the above mixins, we use [Concrete View Classes](https://www.django-rest-framework.org/api-guide/generic-views/#concrete-view-classes), which combine one or more mixins. (Though we can also use the individual mixins directly when a concrete view class combined of required mixins is not there, see [Creating a Cart](/Notes/Part%202/3.%20Designing%20and%20Implementing%20a%20Shopping%20Cart%20API.md#creating-a-cart).)
 
 E.g.:
 
@@ -62,9 +62,15 @@ Using Generic Views, code is much cleaner now, follows DRY, and also adds functi
 
 See `store.views.ProductDetail(RetrieveUpdateDestroyAPIView)`, `store.views.CollectionDetail(RetrieveUpdateDestroyAPIView)`.
 
-Since we used `product = models.ForeignKey(to=Product, on_delete=models.PROTECT)` in `store.models.OrderItem`, if we don't explicitly prevent the deletion, our app would break because of `ProtectedError`. (Comment out the overridden `delete` and test.)
+Since we used `product = models.ForeignKey(to=Product, on_delete=models.PROTECT)` in `store.models.OrderItem`, if we don't explicitly prevent the deletion, our app would break because of `ProtectedError`. (Comment-out the overridden `delete()` and test.)
 
 Read: [django-rest-framework.org/api-guide/generic-views/#examples](https://www.django-rest-framework.org/api-guide/generic-views/#examples)
+
+And, `lookup_field`: [django-rest-framework.org/api-guide/generic-views/#attributes](https://www.django-rest-framework.org/api-guide/generic-views/#attributes:~:text=lookup_field)
+
+- By default generic views expect `pk` as the lookup field URL param (`"products/<int:pk>/"`).
+- If it is `id`, the default practice is to rename it to `pk` to follow conventions.
+- But we can set e.g. `lookup_field = 'slug'` in the view to force it to look for `slug`.
 
 ## ViewSets
 
@@ -115,6 +121,11 @@ ViewSets: [django-rest-framework.org/api-guide/viewsets](https://www.django-rest
 > Both of these come with a trade-off. Using regular views and URL confs is more explicit and gives you more control. ViewSets are helpful if you want to get up and running quickly, or when you have a large API and you want to enforce a consistent URL configuration throughout.
 >
 > \- [django-rest-framework.org/api-guide/viewsets/#example](https://www.django-rest-framework.org/api-guide/viewsets/#example)
+
+---
+
+I still had some confusion between "[Concrete Generic Views](https://www.django-rest-framework.org/api-guide/generic-views/#concrete-view-classes)" and [`ModelViewSet`](https://www.django-rest-framework.org/api-guide/viewsets/#modelviewset), so I asked [Gemini](https://g.co/gemini/share/40308f1c97e6).  
+TLDR: What benefit does ViewSets bring over GenericAPIViews? → Automatic routing.
 
 ## Routers
 
@@ -172,7 +183,7 @@ Use [`DefaultRouter`](https://www.django-rest-framework.org/api-guide/routers/#d
 ```
 
 **Note:** Not sure what's the reason but Mosh taught the wrong way, we should not repeat the logic in the overridden method.  
-**Read Gemini:** [1](https://g.co/gemini/share/4bfcb96cc571), [2](https://g.co/gemini/share/bd09cdc28393)
+**Read Gemini:** [Chat 1](https://g.co/gemini/share/4bfcb96cc571), [Chat 2](https://g.co/gemini/share/bd09cdc28393)
 
 **DRF Nested Routers:** [django-rest-framework.org/api-guide/routers/#drf-nested-routers](https://www.django-rest-framework.org/api-guide/routers/#drf-nested-routers) > [github.com/alanjds/drf-nested-routers](https://github.com/alanjds/drf-nested-routers)
 
