--- a/Notes/Part 2/4. Django Authentication System.md
+++ b/Notes/Part 2/4. Django Authentication System.md
@@ -289,7 +289,7 @@ def __str__(self):
 
 - Django auto-generates 4 permissions for each model:
 
-  - `add_<model>`, `change_<model>`, `delete_<model>`, `view_<model>`
+  - `add_<model>`,  `view_<model>`, `change_<model>`, `delete_<model>` (Memorize: AVCD)
 
 - These are stored in the `auth_permission` table.
 
