--- a/Notes/Part 2/5. Securing APIs.md
+++ b/Notes/Part 2/5. Securing APIs.md
@@ -440,6 +440,22 @@ Official site: [jwt.io](https://jwt.io)
 
 > The reason why `settings.SECRET_KEY` **must not** be pushed to GitHub.
 
+---
+
+**Very important:**
+
+[Researched by me.]
+
+The signature protects against **Tampering**, not **Theft**.
+
+- If a hacker steals a JWT, they **can** impersonate the user.
+
+- **The Signature's Job:** It prevents **Tampering** (e.g., changing your User ID or Role inside the token), not **Theft**.
+
+- **The Defense:** To prevent theft, we use **HTTPS** (to stop sniffing) and **HttpOnly Cookies** (to stop XSS scripts from stealing it), combined with **short expiration times**.
+
+\- [Gemini](https://gemini.google.com/share/6617ce109ce0)
+
 ## Refreshing Tokens
 
 - **Accessing protected endpoints**:
@@ -650,7 +666,7 @@ Maps **HTTP methods** to **required model permissions**:
 - `PUT`, `PATCH` → `change` permission.
 - `DELETE` → `delete` permission.
 
-These `add`, `change`, `delete`, `view` permissions are [Built-in Permissions](/Notes/Part%202/4.%20Django%20Authentication%20System.md#built-in-permissions).
+These `add`, `view`, `change`, `delete` permissions are [Built-in Permissions](/Notes/Part%202/4.%20Django%20Authentication%20System.md#built-in-permissions).
 
 ### Outcome
 
