--- a/Notes/Part 2/6. Designing and Building the Orders API.md
+++ b/Notes/Part 2/6. Designing and Building the Orders API.md
@@ -92,7 +92,7 @@ We need a new serializer.
 
 - **Implementation:**
 
-  1. **Create `CreateOrderSerializer`** (inherits from `Serializer`, not `ModelSerializer`).
+  1. **Create `CreateOrderSerializer`** (IMP. NOTE: inherits from `Serializer`, not `ModelSerializer`).
 
      - Define `cart_id` as a UUID field.
 
