--- a/Notes/Part 3/1. Uploading Files.md
+++ b/Notes/Part 3/1. Uploading Files.md
@@ -99,7 +99,7 @@ Run `makemigrations` & `migrate`.
 Register nested route:
 
 ```py
-product_router.register('images', ProductImageViewSet, basename='product-images')
+product_router.register('images', ProductImageViewSet, basename='product-image')
 ```
 
 ### Error Fix
