--- a/Notes/Part 3/5. Performance Testing.md
+++ b/Notes/Part 3/5. Performance Testing.md
@@ -176,6 +176,8 @@ Summary: Locust simulates real-world user flows (browse, view, add to cart), ass
 
   - Redesign tables, add indexes, optimize schema.
 
+    [**IMP**: **DB Indexes**: [Gemini](https://gemini.google.com/share/353841162561), [ChatGPT](https://chatgpt.com/share/691f8652-bb24-800a-b61d-e764b6243fef)]
+
 - **Cache the result**
 
   Store query results in memory. (Redis)
