--- a/Notes/Part 3/7. Preparing for Production.md
+++ b/Notes/Part 3/7. Preparing for Production.md
@@ -268,6 +268,8 @@ MIDDLEWARE = [
 ]
 ```
 
+- Docs - [Middleware ordering](https://docs.djangoproject.com/en/5.2/ref/middleware/#middleware-ordering)
+
 **WhiteNoise**
 
 > "add WhiteNoise above all other middleware apart from Django’s SecurityMiddleware" - [Docs](https://whitenoise.readthedocs.io/en/stable/#quickstart-for-django-apps)
